--- a/band/template/tourdates.html
+++ b/band/template/tourdates.html
@@ -97,19 +97,28 @@
                                                     </head>
     
     <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
         
         <div class="container">
             
             <div class="masthead">
-                <h3 class="muted">Band 9</h3>
+                
+		<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                 <div class="navbar">
                     <div class="navbar-inner">
                         <div class="container">
                             <ul class="nav">
                                 <li><a href="home.html">Home</a></li>
-                                <li class="active"><a href="tourdates.html">tour dates</a></li>
-                                <li><a href="bio.html">Bios</a></li>
-                                <li><a href="contacts.html">contacts</a></li>
+                                <li class="active"><a href="tourdates.html">Tour</a></li>
+                                <li><a href="bio.html">Members</a></li>
+                                <li><a href="contacts.html">Contact Us</a></li>
                                 
                                 
                             </ul>
@@ -117,30 +126,77 @@
                     </div>
                 </div><!-- /.navbar -->
             </div>
-            
-            <!-- Example row of columns -->
-            <div class="row-fluid">
-                <div class="span4">
-                    <h2>Jan</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
-                <div class="span4">
-                    <h2>Feb</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
-                <div class="span4">
-                    <h2>march</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
+	<hr>
+	<center><h2>Check out Salty Turtle's tour schedule for 2015 below!</h2></center>
+	<hr>
+
+	
+<div class="CSSTableGenerator" >
+                <table >
+                    <tr>
+                        <td>
+                            Date
+                        </td>
+                        <td >
+                            Location
+                        </td>
+                        <td>
+                            Availability
+                        </td>
+                    </tr>
+                    <tr>
+                        <td >
+                            2/22/2015
+                        </td>
+                        <td>
+                            San Diego, CA
+                        </td>
+                        <td>
+                            <a href="tourdates.html">BUY TICKETS NOW</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td >
+                            3/12/2015
+                        </td>
+                        <td>
+                            Phoenix, Az
+                        </td>
+                        <td>
+                            SOLD OUT
+                        </td>
+                    </tr>
+                    <tr>
+                        <td >
+                            4/15/2015
+                        </td>
+                        <td>
+                            New York, NY
+                        </td>
+                        <td>
+                            <a href="tourdates.html">BUY TICKETS NOW</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td >
+                            6/08/2015
+                        </td>
+                        <td>
+                            San Antonio, TX
+                        </td>
+                        <td>
+                            SOLD OUT
+                        </td>
+                    </tr>
+                </table>
             </div>
+
             
+        
             <hr>
             
             <div class="footer">
-                <p>&copy; Company 2013</p>
+                <p>&copy; Salty Turtles 2015</p>
             </div>
             
         </div> <!-- /container -->
