--- a/band/template/tourdates.html
+++ b/band/template/tourdates.html
@@ -117,7 +117,7 @@
                             <ul class="nav">
                                 <li><a href="home.html">Home</a></li>
                                 <li class="active"><a href="tourdates.html">Tour</a></li>
-                                <li><a href="bio.html">Members</a></li>
+                                <li><a href="bio.html">Meet The Band</a></li>
                                 <li><a href="contacts.html">Contact Us</a></li>
                                 
                                 
