photos, bio, pics

--- a/band/template/home.html
+++ b/band/template/home.html
@@ -144,17 +144,17 @@
                 <div class="span4">
                     <h2>IN STORES NOW</h2>
                     <img src ="http://i.imgur.com/JHQomgK.png" alt="Coming Home" style="width:300px;height:280px">
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    
                 </div>
                 <div class="span4">
-                    <h2>Album 2</h2>
-                    <p>DPugs and stuff. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
+                    <h2>IN STORES NOW</h2>
+                    <img src = "../static/turtle.png">
+                    <p><a class="btn" href="#">View details &raquo;</a></p>v>
+                    
                 <div class="span4">
                     <h2>Album 3</h2>
                     <p>lanennenakdjflk</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    
                 </div>
   
             </center></div>
