column fix and erin's picx

--- a/band/template/home.html
+++ b/band/template/home.html
@@ -148,12 +148,12 @@
                 </div>
                 <div class="span4">
                     <h2>IN STORES NOW</h2>
-                    <img src = "../static/turtle.png">
-                    <p><a class="btn" href="#">View details &raquo;</a></p>v>
-                    
+                    <img src = "../static/turtle.png" alt="Shell Shock" style="width:300px;height:280px">
+                </div>   
+
                 <div class="span4">
-                    <h2>Album 3</h2>
-                    <p>lanennenakdjflk</p>
+                    <h2>IN STORES NOW</h2>
+                    <img src = "../static/Album.jpg" alt="CS is for Salty" style="width:300px;height:280px">
                     
                 </div>
   
