--- a/band/template/tourdates.html
+++ b/band/template/tourdates.html
@@ -160,7 +160,7 @@
                             3/12/2015
                         </td>
                         <td>
-                            Phoenix, Az
+                            Phoenix, AZ
                         </td>
                         <td>
                             SOLD OUT
