--- a/band/static/style.css
+++ b/band/static/style.css
@@ -4380,7 +4380,7 @@ input[type="submit"].btn.btn-mini {
     background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
     background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
     background-repeat: repeat-x;
-    border: 1px solid #d4d4d4;
+    border: 5px solid green;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -6165,6 +6165,11 @@ a.badge:focus {
 .affix {
     position: fixed;
 }
+
+
+
+
+
 
 .CSSTableGenerator {
 	margin:0px;padding:0px;
