--- a/band/template/home.html
+++ b/band/template/home.html
@@ -143,7 +143,7 @@
             <center><div class="row-fluid">
                 <div class="span4">
                     <h2>IN STORES NOW</h2>
-                    <img src ="http://i.imgur.com/JHQomgK.png" alt="Coming Home" style="width:300px;height:280px">
+                    <img src ="../static/bandalbum.png" alt="Coming Home" style="width:300px;height:280px">
                     
                 </div>
                 <div class="span4">
