--- a/band/template/home.html
+++ b/band/template/home.html
@@ -97,14 +97,15 @@
                                                     </head>
     
     <body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+	<!-- Facebook like/share button -->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+  		var js, fjs = d.getElementsByTagName(s)[0];
+  	if (d.getElementById(id)) return;
+  	js = d.createElement(s); js.id = id;
+  	js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  	fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
         
         <div class="container">
             
@@ -131,13 +132,13 @@
             <div class="jumbotron">
                 <h1>Salty Turtles</h1>
 		
-                <p class="lead">Follow our Twitter and Facebook</p>
-                <a class="btn btn-large btn-success" href="bio.html">Get to know us more</a>
+                
+
             </div>
-            
-            <hr>
-	    <center><h4>Latest Album's</h4></center>
-	    <hr>
+		<hr>
+                <center><a class="btn btn-large btn-success" href="bio.html">Get to know us more</a></center>
+            	<hr>
+   
             
             <!-- Example row of columns -->
             <center><div class="row-fluid">
@@ -157,15 +158,18 @@
                     
                 </div>
   
-            </center></div>
+            </center>
+	 <hr>
             
-            <hr>
+        <div class="footer">
+           <p>&copy; Salty Turtles 2015</p>
+        </div>        
             
-            <div class="footer">
-                <p>&copy; Salty Turtles 2015</p>
-            </div>
+
             
         </div> <!-- /container -->
+
+  
         
         <!-- Le javascript
          ================================================== -->
