Bio And Page Titles
Updated my Bio with some very late night inspired shenanigans, Changed
the page titles to something more appropriate, and undid the footer
center on the homepage to match the other pages.

--- a/band/template/home.html
+++ b/band/template/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-            <title>Template &middot; Bootstrap</title>
+            <title>Salty Turtles</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <meta name="description" content="">
                     <meta name="author" content="">
@@ -158,14 +158,14 @@
                 </div>
                 <div class="span4">
                     <h2>COMING SOON</h2>
-                    <img src = "../static/HonuAlbumCover.png" alt="Shell Shock" style="width:300px;height:280px">
+                    <img src = "../static/HonuAlbumCover.png" alt="SaltyHonu" style="width:300px;height:280px">
                 </div>
             </div>
             
             <hr>
             
             <div class="footer">
-                <center><p>&copy; Salty Turtles 2015</p></center>
+                <p>&copy; Salty Turtles 2015</p>
             </div>
             
         </div> <!-- /container -->
